// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EpicStatusSteps /> renders steps: dev assigned 1`] = `
<div>
  <h3
    class="slds-text-heading_medium slds-m-bottom_small"
  >
    Next Steps for this Epic
  </h3>
  <div
    class="slds-progress slds-progress_vertical"
  >
    <ol
      class="slds-progress__list"
    >
      <li
        class="slds-progress__item slds-is-completed"
      >
        <span
          class="slds-icon_container slds-icon-utility-success slds-progress__marker slds-progress__marker_icon slds-m-left_small"
          title="Complete"
        >
          <svg
            aria-hidden="true"
            class="slds-icon slds-icon_x-small slds-icon-text-default"
          >
            <use />
          </svg>
          <span
            class="slds-assistive-text"
          >
            Complete
          </span>
        </span>
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Create a Task
        </div>
      </li>
      <li
        class="slds-progress__item slds-is-completed"
      >
        <span
          class="slds-icon_container slds-icon-utility-success slds-progress__marker slds-progress__marker_icon slds-m-left_small"
          title="Complete"
        >
          <svg
            aria-hidden="true"
            class="slds-icon slds-icon_x-small slds-icon-text-default"
          >
            <use />
          </svg>
          <span
            class="slds-assistive-text"
          >
            Complete
          </span>
        </span>
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Assign a Developer to a Task
        </div>
      </li>
      <li
        class="slds-progress__item slds-is-active"
      >
        <div
          class="slds-progress__marker slds-m-left_small"
        >
          <span
            class="slds-assistive-text"
          >
            Active
          </span>
        </div>
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Complete a Task
        </div>
      </li>
      <li
        class="slds-progress__item"
      >
        <div
          class="slds-progress__marker slds-m-left_small"
        />
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Submit this Epic for review on GitHub
        </div>
      </li>
      <li
        class="slds-progress__item"
      >
        <div
          class="slds-progress__marker slds-m-left_small"
        />
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Merge pull request on GitHub
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`<EpicStatusSteps /> renders steps: epic with commits 1`] = `
<div>
  <h3
    class="slds-text-heading_medium slds-m-bottom_small"
  >
    Next Steps for this Epic
  </h3>
  <div
    class="slds-progress slds-progress_vertical"
  >
    <ol
      class="slds-progress__list"
    >
      <li
        class="slds-progress__item slds-is-completed"
      >
        <span
          class="slds-icon_container slds-icon-utility-success slds-progress__marker slds-progress__marker_icon slds-m-left_small"
          title="Complete"
        >
          <svg
            aria-hidden="true"
            class="slds-icon slds-icon_x-small slds-icon-text-default"
          >
            <use />
          </svg>
          <span
            class="slds-assistive-text"
          >
            Complete
          </span>
        </span>
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Create a Task
        </div>
      </li>
      <li
        class="slds-progress__item slds-is-completed"
      >
        <span
          class="slds-icon_container slds-icon-utility-success slds-progress__marker slds-progress__marker_icon slds-m-left_small"
          title="Complete"
        >
          <svg
            aria-hidden="true"
            class="slds-icon slds-icon_x-small slds-icon-text-default"
          >
            <use />
          </svg>
          <span
            class="slds-assistive-text"
          >
            Complete
          </span>
        </span>
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Assign a Developer to a Task
        </div>
      </li>
      <li
        class="slds-progress__item slds-is-completed"
      >
        <span
          class="slds-icon_container slds-icon-utility-success slds-progress__marker slds-progress__marker_icon slds-m-left_small"
          title="Complete"
        >
          <svg
            aria-hidden="true"
            class="slds-icon slds-icon_x-small slds-icon-text-default"
          >
            <use />
          </svg>
          <span
            class="slds-assistive-text"
          >
            Complete
          </span>
        </span>
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Complete a Task
        </div>
      </li>
      <li
        class="slds-progress__item slds-is-active"
      >
        <div
          class="slds-progress__marker slds-m-left_small"
        >
          <span
            class="slds-assistive-text"
          >
            Active
          </span>
        </div>
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          <button
            class="slds-button_reset slds-text-link"
            type="button"
          >
            Submit this Epic for review on GitHub
          </button>
        </div>
      </li>
      <li
        class="slds-progress__item"
      >
        <div
          class="slds-progress__marker slds-m-left_small"
        />
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Merge pull request on GitHub
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`<EpicStatusSteps /> renders steps: epic with pr 1`] = `
<div>
  <h3
    class="slds-text-heading_medium slds-m-bottom_small"
  >
    Next Steps for this Epic
  </h3>
  <div
    class="slds-progress slds-progress_vertical"
  >
    <ol
      class="slds-progress__list"
    >
      <li
        class="slds-progress__item slds-is-completed"
      >
        <span
          class="slds-icon_container slds-icon-utility-success slds-progress__marker slds-progress__marker_icon slds-m-left_small"
          title="Complete"
        >
          <svg
            aria-hidden="true"
            class="slds-icon slds-icon_x-small slds-icon-text-default"
          >
            <use />
          </svg>
          <span
            class="slds-assistive-text"
          >
            Complete
          </span>
        </span>
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Create a Task
        </div>
      </li>
      <li
        class="slds-progress__item slds-is-completed"
      >
        <span
          class="slds-icon_container slds-icon-utility-success slds-progress__marker slds-progress__marker_icon slds-m-left_small"
          title="Complete"
        >
          <svg
            aria-hidden="true"
            class="slds-icon slds-icon_x-small slds-icon-text-default"
          >
            <use />
          </svg>
          <span
            class="slds-assistive-text"
          >
            Complete
          </span>
        </span>
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Assign a Developer to a Task
        </div>
      </li>
      <li
        class="slds-progress__item slds-is-completed"
      >
        <span
          class="slds-icon_container slds-icon-utility-success slds-progress__marker slds-progress__marker_icon slds-m-left_small"
          title="Complete"
        >
          <svg
            aria-hidden="true"
            class="slds-icon slds-icon_x-small slds-icon-text-default"
          >
            <use />
          </svg>
          <span
            class="slds-assistive-text"
          >
            Complete
          </span>
        </span>
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Complete a Task
        </div>
      </li>
      <li
        class="slds-progress__item slds-is-completed"
      >
        <span
          class="slds-icon_container slds-icon-utility-success slds-progress__marker slds-progress__marker_icon slds-m-left_small"
          title="Complete"
        >
          <svg
            aria-hidden="true"
            class="slds-icon slds-icon_x-small slds-icon-text-default"
          >
            <use />
          </svg>
          <span
            class="slds-assistive-text"
          >
            Complete
          </span>
        </span>
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Submit this Epic for review on GitHub
        </div>
      </li>
      <li
        class="slds-progress__item slds-is-active"
      >
        <div
          class="slds-progress__marker slds-m-left_small"
        >
          <span
            class="slds-assistive-text"
          >
            Active
          </span>
        </div>
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          <a
            href="https://github.com/test/test-repo/pulls/123"
            rel="noreferrer noopener"
            target="_blank"
          >
            Merge pull request on GitHub
            <span
              class="slds-m-left_xx-small"
            >
              <svg
                aria-hidden="true"
                class="slds-m-bottom_xx-small slds-icon slds-icon_xx-small slds-icon-text-default"
              >
                <use />
              </svg>
              
            </span>
          </a>
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`<EpicStatusSteps /> renders steps: merged epic 1`] = `
<div>
  <h3
    class="slds-text-heading_medium slds-m-bottom_small"
  >
    Next Steps for this Epic
  </h3>
  <div
    class="slds-progress slds-progress_vertical"
  >
    <ol
      class="slds-progress__list"
    >
      <li
        class="slds-progress__item slds-is-completed"
      >
        <span
          class="slds-icon_container slds-icon-utility-success slds-progress__marker slds-progress__marker_icon slds-m-left_small"
          title="Complete"
        >
          <svg
            aria-hidden="true"
            class="slds-icon slds-icon_x-small slds-icon-text-default"
          >
            <use />
          </svg>
          <span
            class="slds-assistive-text"
          >
            Complete
          </span>
        </span>
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Create a Task
        </div>
      </li>
      <li
        class="slds-progress__item slds-is-completed"
      >
        <span
          class="slds-icon_container slds-icon-utility-success slds-progress__marker slds-progress__marker_icon slds-m-left_small"
          title="Complete"
        >
          <svg
            aria-hidden="true"
            class="slds-icon slds-icon_x-small slds-icon-text-default"
          >
            <use />
          </svg>
          <span
            class="slds-assistive-text"
          >
            Complete
          </span>
        </span>
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Assign a Developer to a Task
        </div>
      </li>
      <li
        class="slds-progress__item slds-is-completed"
      >
        <span
          class="slds-icon_container slds-icon-utility-success slds-progress__marker slds-progress__marker_icon slds-m-left_small"
          title="Complete"
        >
          <svg
            aria-hidden="true"
            class="slds-icon slds-icon_x-small slds-icon-text-default"
          >
            <use />
          </svg>
          <span
            class="slds-assistive-text"
          >
            Complete
          </span>
        </span>
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Complete a Task
        </div>
      </li>
      <li
        class="slds-progress__item slds-is-completed"
      >
        <span
          class="slds-icon_container slds-icon-utility-success slds-progress__marker slds-progress__marker_icon slds-m-left_small"
          title="Complete"
        >
          <svg
            aria-hidden="true"
            class="slds-icon slds-icon_x-small slds-icon-text-default"
          >
            <use />
          </svg>
          <span
            class="slds-assistive-text"
          >
            Complete
          </span>
        </span>
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Submit this Epic for review on GitHub
        </div>
      </li>
      <li
        class="slds-progress__item slds-is-completed"
      >
        <span
          class="slds-icon_container slds-icon-utility-success slds-progress__marker slds-progress__marker_icon slds-m-left_small"
          title="Complete"
        >
          <svg
            aria-hidden="true"
            class="slds-icon slds-icon_x-small slds-icon-text-default"
          >
            <use />
          </svg>
          <span
            class="slds-assistive-text"
          >
            Complete
          </span>
        </span>
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Merge pull request on GitHub
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`<EpicStatusSteps /> renders steps: planned, no tasks 1`] = `
<div>
  <h3
    class="slds-text-heading_medium slds-m-bottom_small"
  >
    Next Steps for this Epic
  </h3>
  <div
    class="slds-progress slds-progress_vertical"
  >
    <ol
      class="slds-progress__list"
    >
      <li
        class="slds-progress__item slds-is-active"
      >
        <div
          class="slds-progress__marker slds-m-left_small"
        >
          <span
            class="slds-assistive-text"
          >
            Active
          </span>
        </div>
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Create a Task
        </div>
      </li>
      <li
        class="slds-progress__item"
      >
        <div
          class="slds-progress__marker slds-m-left_small"
        />
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Assign a Developer to a Task
        </div>
      </li>
      <li
        class="slds-progress__item"
      >
        <div
          class="slds-progress__marker slds-m-left_small"
        />
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Complete a Task
        </div>
      </li>
      <li
        class="slds-progress__item"
      >
        <div
          class="slds-progress__marker slds-m-left_small"
        />
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Submit this Epic for review on GitHub
        </div>
      </li>
      <li
        class="slds-progress__item"
      >
        <div
          class="slds-progress__marker slds-m-left_small"
        />
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Merge pull request on GitHub
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`<EpicStatusSteps /> renders steps: task created, no assigned dev 1`] = `
<div>
  <h3
    class="slds-text-heading_medium slds-m-bottom_small"
  >
    Next Steps for this Epic
  </h3>
  <div
    class="slds-progress slds-progress_vertical"
  >
    <ol
      class="slds-progress__list"
    >
      <li
        class="slds-progress__item slds-is-completed"
      >
        <span
          class="slds-icon_container slds-icon-utility-success slds-progress__marker slds-progress__marker_icon slds-m-left_small"
          title="Complete"
        >
          <svg
            aria-hidden="true"
            class="slds-icon slds-icon_x-small slds-icon-text-default"
          >
            <use />
          </svg>
          <span
            class="slds-assistive-text"
          >
            Complete
          </span>
        </span>
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Create a Task
        </div>
      </li>
      <li
        class="slds-progress__item slds-is-active"
      >
        <div
          class="slds-progress__marker slds-m-left_small"
        >
          <span
            class="slds-assistive-text"
          >
            Active
          </span>
        </div>
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Assign a Developer to a Task
        </div>
      </li>
      <li
        class="slds-progress__item"
      >
        <div
          class="slds-progress__marker slds-m-left_small"
        />
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Complete a Task
        </div>
      </li>
      <li
        class="slds-progress__item"
      >
        <div
          class="slds-progress__marker slds-m-left_small"
        />
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Submit this Epic for review on GitHub
        </div>
      </li>
      <li
        class="slds-progress__item"
      >
        <div
          class="slds-progress__marker slds-m-left_small"
        />
        <div
          class="slds-progress__item_content slds-grid slds-grid_align-spread"
        >
          Merge pull request on GitHub
        </div>
      </li>
    </ol>
  </div>
</div>
`;
